# ChangeLog for media-sound/lame
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/lame/ChangeLog,v 1.119 2010/03/03 13:07:46 aballier Exp $

*lame-3.98.3 (03 Mar 2010)

  03 Mar 2010; Alexis Ballier <aballier@gentoo.org> +lame-3.98.3.ebuild:
  version bump

*lame-3.98.2-r2 (22 Jul 2009)

  22 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  +lame-3.98.2-r2.ebuild, +files/lame-3.98.2-get_audio.patch:
  Support stdin and stdout with sndfile wrt #274255, thanks to Naohiro Aota
  and Jérôme Poulin.

  25 Jun 2009; Raúl Porcel <armin76@gentoo.org> lame-3.98.2-r1.ebuild:
  arm/ia64/sh/sparc stable

  22 Jun 2009; Jeroen Roovers <jer@gentoo.org> lame-3.98.2-r1.ebuild:
  Stable for HPPA (bug #274666).

  21 May 2009; Brent Baude <ranger@gentoo.org> lame-3.98.2-r1.ebuild:
  Marking lame-3.98.2-r1 ppc64 stable for bug 266986

  21 May 2009; Brent Baude <ranger@gentoo.org> lame-3.98.2-r1.ebuild:
  Marking lame-3.98.2-r1 ppc stable for bug 266986

  14 May 2009; Markus Meier <maekke@gentoo.org> lame-3.98.2-r1.ebuild:
  amd64 stable, bug #266986

  12 May 2009; Christian Faulhammer <fauli@gentoo.org>
  lame-3.98.2-r1.ebuild:
  stable x86, bug 266986

  03 May 2009; Tobias Klausmann <klausman@gentoo.org> lame-3.98.2-r1.ebuild:
  Stable on alpha, bug #266986

*lame-3.98.2-r1 (03 May 2009)

  03 May 2009; Peter Alfredsen <loki_val@gentoo.org>
  +files/lame-3.98.2-ffmpeg-0.5.patch, +lame-3.98.2-r1.ebuild:
  Backport fix from upstream so ffmpeg won't choke on libmp3lame. Bug
  265830.

  29 Mar 2009; Steve Dibb <beandog@gentoo.org> lame-3.98.ebuild:
  amd64 stable

  14 Nov 2008; Raúl Porcel <armin76@gentoo.org> lame-3.98.2.ebuild:
  alpha/arm/ia64/sh/x86 stable wrt #246219

  14 Nov 2008; Jeroen Roovers <jer@gentoo.org> lame-3.98.2.ebuild:
  Stable for HPPA (bug #246219).

  12 Nov 2008; Joseph Jezak <josejx@gentoo.org> lame-3.98.2.ebuild:
  Marked ppc/ppc64 stable for bug #246219.
