@@ -4,9 +4,11 @@ AUX lame-3.98-shared-frontend.patch 1008 RMD160 8e12e752a325926e1376e45ffd3b72ca
 AUX lame-3.98.2-ffmpeg-0.5.patch 2950 RMD160 71628a5b2d9ac7365ccbac3dbf3de7cea6006b5d SHA1 1f7c0a6c90bdc133921f999f1ed0855e95d39a5a SHA256 f9de77da233d81485463cf6c51a3b7ff21be78b17f7d91741532f9a9f5577500
 AUX lame-3.98.2-get_audio.patch 957 RMD160 84f176d996902152c6b8da2c8ac4b97c7f3ad8a4 SHA1 081d6701d265d303f84528b9f9bfc5d2f520f8a1 SHA256 2a77567a7cf77e4c247a9fd3843db4a8b1b3f84adf0197ee1d4c1af2fff37910
 DIST lame-3.98.3.tar.gz 1329075 RMD160 52d31607625b9c80e7b2f8ebd239900a0bdd7401 SHA1 35a854710a4a580a9277df3309014e5d8faf8d94 SHA256 1eb8cf656f5324a6fae3d080ee8a280db8be420ede5a08b516f4d4eb53424a52
+DIST lame-3.98.4.tar.gz 1336008 RMD160 0c554f587ea736f33b44d40e4ab06e1160a04050 SHA1 89a46e47380710c68f598c762301ab31b989fa5c SHA256 f2a3904a0ddc0356b4150be98c007374e8cf9784325336c0e29c8375b220a438
 DIST lame-398-2.tar.gz 1327643 RMD160 767dd94271eef221170469535db2bf388149715a SHA1 b2db41dbc9c0824caa102e8c932b820c79ccd5ec SHA256 a17a28569d8ed1e514915c1f12bdf4eedac506e5fbdf9a429ba97d5d42c9af32
 EBUILD lame-3.98.2-r1.ebuild 2633 RMD160 c91951cf1f0e68bf9d741851faa10044b461178b SHA1 b6260d82f8750a4741299f1d29b1d953e2fb392d SHA256 75ed92336ef30d2bf3050f9b040c63201d6a53c0628282bc23526ddeca3d8da0
 EBUILD lame-3.98.2-r2.ebuild 2736 RMD160 ab6a7c1cd9d83c06deb10dba8e2fcf076b1552f1 SHA1 f5133bf0e9c97febb481007466cdb847eba54690 SHA256 0ef8d77cdaa828e0b50d171a0aab8e02bd497c0c15b7db268ebd7ec76e370554
 EBUILD lame-3.98.3.ebuild 2488 RMD160 f57f21225066e7dfcd57281d5fef2d5c4fc524f7 SHA1 f9c218f9ea43630a82ceaa01ff94575a4c7f05ec SHA256 943e9f761765721f31f237b68764e04fbc8cf73506d93e520ff905acc025083a
-MISC ChangeLog 16425 RMD160 75d7d24b5db8b229ceb11c9650817f97cb686da3 SHA1 901ff3231f1f4bc227c970803c865eb3f5cfbc73 SHA256 d8fd7d62509df5b07bba899e7cd5b9339b9984b35db0bb9903ede40e0dd534ad
+EBUILD lame-3.98.4.ebuild 2488 RMD160 d1c8119ced4f3572d07c0116bfe6ff2d9ffe4a3d SHA1 80b1d039c8c35c74ba6b506fa97522c262d90004 SHA256 44ad7aeb32032f01e93da66208785f1cc47748a643b2c9cb8f44aca56925e137
+MISC ChangeLog 16542 RMD160 1de4dca644690662641b0f7209980d8adbaef820 SHA1 f25d9a18022eb356899f8d150736787c3d0332fb SHA256 6d4ab9764ecca2eb6be3b3c663e6038d32ea49f728e1ce5683f4a5aa42ca7c81
 MISC metadata.xml 264 RMD160 a6be36fe4dffbf9280e34fafcf40571d0f960580 SHA1 7e6bff4996ab638c7e04e31197d3b45f9752c00f SHA256 69ff3c8176be87b9e058cf261280c392e026742616602914b8ee3e3b6eaa2280
