@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/lame
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/lame/ChangeLog,v 1.119 2010/03/03 13:07:46 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/lame/ChangeLog,v 1.120 2010/04/12 07:02:16 aballier Exp $
+
+*lame-3.98.4 (12 Apr 2010)
+
+  12 Apr 2010; Alexis Ballier <aballier@gentoo.org> +lame-3.98.4.ebuild:
+  version bump
 
 *lame-3.98.3 (03 Mar 2010)
 
